# wonderland-the-first

./: .gitignore  README.md  __init__.py  pyproject.toml  run_simulation.py  view_genome.py
SimulatedGenomes/sim_21_24-05-2025/: sim_21_24-05-2025.pkl
SimulatedGenomes/sim_22_24-05-2025/: sim_22_24-05-2025.pkl
SimulatedGenomes/sim_2_24-05-2025/: sim_2_24-05-2025.pkl
SimulatedGenomes/sim_gen_1/: sim_1_18-05-2025.pkl
evolutionary_playground_library/: __init__.py  agent_c2.py  agent_utils.py  agents.py  agents_actions.py  attributes.py  config.py  evolution.py  model.py
