[project]
name = "wonderland"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua Junker",email = "joshiklis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neat-python (>=0.92,<0.93)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "mesa (==2.3.2)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
